# hydroPilot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
.claude/memory/: MEMORY.md  project_design_decisions.md  project_swat_reference.md
.claude/plans/: architecture.md  dev_plan1.md  foamy-zooming-hejlsberg.md  goal3_swat_template_plan.md  main_plans.md  mainstream_model_io_review.md  monthly_complex_test.md  reporting-storage-review.md  test.md
.github/workflows/: release.yml
docs/: architecture.md  architecture.zh-CN.md  tutorial.zh-CN.md
examples/: calc_tn_load.py  monthly_transform.py  obs_flow.txt  obs_flow_monthly.txt  obs_tn_monthly.txt  series_transform.py  series_transform_warning.py  test_daily.yaml  test_daily_general.yaml  test_monthly.yaml  test_monthly_complex.yaml  test_monthly_complex_general.yaml  test_monthly_general.yaml  test_monthly_series.yaml  test_monthly_series_general.yaml  test_monthly_series_warning.yaml  test_monthly_series_warning_general.yaml
hydro_pilot/: __init__.py  errors.py  sim_model.py
hydro_pilot/adapter/: __init__.py  adapter.py
hydro_pilot/config/: loader.py  specs.py
hydro_pilot/evaluation/: __init__.py  evaluator.py  func_manager.py
hydro_pilot/params/: __init__.py  manager.py  transformer.py
hydro_pilot/params/writers/: __init__.py  base.py  fixed_width.py
hydro_pilot/reporting/: __init__.py  reporter.py
hydro_pilot/runner/: base.py  subprocess_runner.py
hydro_pilot/series/: __init__.py  extractor.py
hydro_pilot/series/readers/: __init__.py  base.py  text_reader.py
hydro_pilot/templates/swat/: __init__.py  builder.py  library.py  series.py  template.py  variables.py
hydro_pilot/wrappers/: __init__.py  uqpyl_adapter.py
scripts/: demo_series_warning.py  extract_obs.py  test_daily.py  test_monthly_complex.py  test_monthly_series.py
src/hydro_pilot/: __init__.py
src/hydro_pilot/api/: __init__.py  sim_model.py
src/hydro_pilot/cli/: validate.py
src/hydro_pilot/config/: __init__.py  loader.py  specs.py
src/hydropilot/: __init__.py
tests/: conftest.py  test_config_test.py  test_monthly_complex_io_protocol.py  test_public_imports.py  test_runtime_behavior_locks.py  test_subprocess_runner.py  test_validate.py
(+98 files in other folders)
